# tmux-mindmap

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  freeplane_tmux.py  pyproject.toml
.github/workflows/: ci.yml  release-binary.yml
examples/: example-map.json  multi-relationship-map.json
examples/history/: bird.map.json  bird.tmuxp.yaml  complex-three-panes.map.json  complex-three-panes.tmuxp.yaml  historical-comprehensive.map.json  historical-comprehensive.tmuxp.yaml  jinja-node-names.map.json  jinja-node-names.tmuxp.yaml  manifest.json  mixed-window.map.json  mixed-window.tmuxp.yaml  multi-relationship.tmuxp.yaml  project-example.map.json  project-example.tmuxp.yaml  relationship-args.map.json  relationship-args.tmuxp.yaml  relationship-plain-attributes.map.json  relationship-plain-attributes.tmuxp.yaml  relationship-v1.map.json  relationship-v1.tmuxp.yaml  root-lookup-lists.map.json  root-lookup-lists.tmuxp.yaml  scoped-helpers.map.json  scoped-helpers.tmuxp.yaml  session-workdir.map.json  session-workdir.tmuxp.yaml  starter.map.json  starter.tmuxp.yaml  template-vars-runtime.map.json  template-vars-runtime.tmuxp.yaml  window-inheritance.map.json  window-inheritance.map.yaml  window-inheritance.tmuxp.yaml
packaging/: freeplane-tmux.spec  pyinstaller_entry.py
packaging/freeplane-addon/: README.md
packaging/freeplane-addon/scripts/: clear-diagnostics.groovy  doctor.groovy  explain-map.groovy  load-session.groovy  validate-map.groovy
scripts/: freeplane_tmux_launcher.sh
src/freeplane_tmux/: __init__.py  addon.py  cli.py  compiler.py  diagnostics.py  doctor.py  emitter.py  errors.py  freeplane_projector.py  groovy.py  grpc_client.py  launcher.py  models.py  runtime.py  scope.py  shell.py  templates.py  text.py
tests/: conftest.py  test_cli.py  test_context.py  test_groovy.py  test_grpc_create_map.py  test_grpc_current_node.py  test_history_fixtures.py  test_launcher.py  test_relationships.py  test_repository_cleanliness.py  test_runtime.py  test_text.py  test_tmuxp_integration.py  test_v04_features.py  test_validation.py  test_windows.py  test_workdir.py
