[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "freeplane-tmux"
version = "0.4.0"
description = "Compile Freeplane mindmaps into tmuxp sessions through freeplane_plugin_grpc"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "freeplane-tmux contributors"}]
keywords = ["freeplane", "tmux", "tmuxp", "grpc", "mindmap"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Shells",
]
dependencies = [
  "grpcio>=1.60",
  "protobuf>=4.25",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0",
  "tmuxp>=1.74,<1.75",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
build = [
  "build>=1.2",
  "pyinstaller>=6.21,<7",
]

[project.scripts]
freeplane-tmux = "freeplane_tmux.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "tmuxp_integration: launches real tmuxp and tmux processes",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
